2005-04-03  Martin Blom  <martin@blom.org>

	* ahi.device: Applied an old clean-up patch from Gunther Nikl to
	header.c.

2005-03-29  Martin Blom  <martin@blom.org>

	* Released ahi.device 6.1.

	* Device/header.c: Instead removed the 'static' keyword on RomTag
	and undid the __attribute__ fix to avoid a warning when using gcc
	2.x.

	* ahi.device: Applied a patch from Piru that removed the usage of
	SIGBREAKF_CTRL_F in ahi.device, working around a problem in the
	latest MorphOS ixemul.library. Thanks! [Harry Sintonen]

2005-03-26  Martin Blom  <martin@blom.org>

	* Device/header.c: Added __attribute__((used)) to RomTag. [Davy
	Wentzler].

	* Released emu10kx.audio 6.1.

	* emu10kx.audio: Added write-only (for now) access to internal
	DSP volume registers via the AC97 mixer interface.

	* configure.in: Temporarily added -msoft-float to OS4 compiler
	flags.

	* ac97.audio: Bumped version number to 6.0.

	* ac97.audio: Added this AROS driver to the distribution, with
	permission from its author Michal Schulz. Thanks Michal!

	* emu10kx.audio: Added small patch from Davy.

2005-03-24  Martin Blom  <martin@blom.org>

	* emu10kx.audio: Removed unnecessary OS4-only interrupt disable
	code.

2005-03-21  Martin Blom  <martin@blom.org>

	* emu10kx.audio: Applied a fix from Davy for the recording problem
	on Audigy cards. Thanks!

2005-02-02  Martin Blom  <martin@blom.org>

	* Updated all copyright years to 2005.

	* Bumped all version numbers to 6.0.

	* Docs/ahidev.texinfo (The Author): Updated the authors address (5
	years later).

	* Added updated/new italian translations by Paolo Besser. Thanks!

	* AHI preferences: Update the strings in the unit cycle gadget
	when loading new prefs from disk or restoring to the
	defaults. [Gunther Nikl]

2005-01-28  Martin Blom  <martin@blom.org>

	* Updated the docs and .readme files a bit.

2005-01-23  Martin Blom  <martin@blom.org>

	* ahi.device: That CPU overload protection (PreTimer/PostTimer)