@@ -1,5 +1,7 @@
 2005-04-03  Martin Blom  <martin@blom.org>
 
+	* ahi.device: Removed the beta requester from the Amithlon build.
+
 	* ahi.device: Applied an old clean-up patch from Gunther Nikl to
 	header.c.
 
